# collection-web

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  360_vid_davinci_resolve.drp  LICENSE  README.md  get_data.ipynb  mypy.ini  pyproject.toml
.github/workflows/: CI.yml  update_site.yml
360_vid_davinci_resolve_project/: Project.db
360_vid_davinci_resolve_project/Batch Renders/: 09ea384f-feca-4d05-b0ea-429c47eb524d.xml
data_update/: __main__.py  requirements.txt  utils.py
web/: collection.js  index.html  style.css
