[tool.poetry]
name = "collection-data-update"
version = "0.1.0"
description = ""
authors = ["Paul Klinger <klinger.paul@gmail.com>"]
readme = "README.md"

packages = [
    { include = "data_update" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pysftp = "^0.2.9"
pandas = "^2.2.2"
pygsheets = "^2.0.6"
google-api-python-client = "^2.169.0"
oauth2client = "^4.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.7.0"
types-requests = "^2.31.0.20240406"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
exclude = "env|scratchpad"
ignore_missing_imports = true
disallow_untyped_defs = true
